# bug_tracker

./: .dockerignore  .env.db.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: run_tests.yml
bug_tracker/: asgi.py  settings.py  urls.py  wsgi.py
docs/: features.md  index.md  tech-stack.md
main/: admin.py  forms.py  models.py  moderation.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/templates/main/: bug_reports.html  create_bug_report.html  index.html
settings/: base.py  local.py  production.py
static_files/css/: style.css
static_files/js/: nav_collapse.js
templates/: base.html  footer.html  navbar.html
