[tool.poetry]
name = "bug-tracker"
version = "0.1.0"
description = ""
authors = ["Piotr Fura <pf.github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.4"
django-environ = "^0.12.0"
django-allauth = "^65.9.0"
django-crispy-forms = "^2.4"
crispy-bootstrap5 = "^2025.6"
gunicorn = "^23.0.0"
psycopg-binary = "^3.2.9"
sentry-sdk = "^2.32.0"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^5.2.0"
pre-commit = "^4.2.0"
black = "^25.1.0"
flake8 = "^7.3.0"
pylint-django = "^2.6.1"
pytest-django = "^4.11.1"
pytest-cov = "^6.2.1"
pytest-sugar = "^1.0.0"
isort = "^6.0.1"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
